added file destination

--- a/GUI2.kv
+++ b/GUI2.kv
@@ -32,6 +32,13 @@ WindowManager:
         TextInput:
             id: url
             multiline: False
+		Label:
+			text: "Choose your file destination"
+		TextInput:
+			id: path
+			multiline: False
+		Button:
+			text: "Choose file dest"
         Label:
             text: "Check if you want to download .mp3 file"
         CheckBox:
