--- a/GUI2.kv
+++ b/GUI2.kv
@@ -1,3 +1,4 @@
+#:import threading threading
 <Label>
     background_color: (0,0,1,1)
 	font_size: 15				
@@ -15,6 +16,9 @@
 <TextInput>
     size_hint_y: None
     height: 30
+    font_size: 15
+    
+
 
 WindowManager:
     FirstWindow:
@@ -25,18 +29,13 @@ WindowManager:
     name: "first"
     BoxLayout:
         cols:1
-        size: root.width, root.height
+        size: root.height , root.width
         orientation: "vertical"			
         Label:
             text: "Download Single File from Youtube - insert link"
         TextInput:
-            id: url
-            multiline: False
-		Label:
-			text: "Choose your file destination"
-		TextInput:
-			id: path
-			multiline: False
+            id: url      
+            multiline: False                                         
 		Button:
 			text: "Choose file dest"
         Label:
@@ -79,10 +78,17 @@ WindowManager:
             on_active: root.checkbox_click(self, self.active,"mp3")
         Button:
             text: "Click here to download a playlist"  
-            on_press: root.DownloadPlaylist()  
+            on_press: 
+                threading.Thread(target=root.showtitle).start()
+                threading.Thread(target=root.DownloadPlaylist).start()
+                
+        Label:
+            id: current
+            text: root.title_text
+            
         Label:
             id: output_label
-            text: "You selected downloading video file"
+            text: "You choose downloading video file"
         Button:
             text: "<-- Download a single video from Youtube"
             background_color: (1,0,1,1)
