--- a/GUI2.kv
+++ b/GUI2.kv
@@ -1,4 +1,5 @@
 #:import threading threading
+
 <Label>
     background_color: (0,0,1,1)
 	font_size: 15				
@@ -7,17 +8,13 @@
 	italic: True
 	outline_color: (124,252,0)
 	outline_width: 2
-	size_hint_y: None
-	height: 30
 <Button>
     size_hint_y: None
     height: 30
-    font_size: 15
+    width: root.width
 <TextInput>
     size_hint_y: None
-    height: 30
-    font_size: 15
-    
+    height: 30   
 
 
 WindowManager:
@@ -35,19 +32,39 @@ WindowManager:
             text: "Download Single File from Youtube - insert link"
         TextInput:
             id: url      
-            multiline: False                                         
-		Button:
-			text: "Choose file dest"
+            multiline: False 
+        BoxLayout:                                          
+    		Button:
+    			text: "Choose download destination"
+    			on_release:
+        			root.file_chooser()        
+            Button:
+                text: "Click here to download a file"
+                on_press:
+                    threading.Thread(target=root.showtitle).start()
+                    threading.Thread(target=root.DownloadSingle).start()
+        Label:
+            id: path
+            text: root.path
+            color: (1,1,2,1)
+            background_color: (1,1,1,1)
+            outline_color: (124,252,0)
+        	outline_width: 2       
         Label:
             text: "Check if you want to download .mp3 file"
         CheckBox:
-            on_active: root.checkbox_click(self, self.active,"mp3")
-        Button:
-            text: "Click here to download a file"
-            on_press: root.DownloadSingle()   
+            on_active: root.checkbox_click(self, self.active,"mp3")    
         Label:
             id: output_label
             text: "You selected downloading video file"
+        Label:
+            id: current
+            color: (1,1,2,1)
+            background_color: (1,1,1,1)
+            outline_color: (124,252,0)
+        	outline_width: 2
+            
+            text: root.title_text
         Button:
             text: "Download a playlist from Youtube -->"
             background_color: (1,0,1,1)
@@ -72,23 +89,40 @@ WindowManager:
         TextInput:
             id: url
             multiline: False
+        BoxLayout:       
+            Button:
+    			text: "Choose download destination"
+    			on_release:
+        			root.file_chooser()        
+            Button:
+                text: "Click here to download a playlist"  
+                on_press: 
+                    t=threading.Thread(target=root.showtitle)
+                    k=threading.Thread(target=root.DownloadPlaylist)
+                    t.start()
+                    k.start()
+        Label:
+            id: path
+            text: root.path
+            color: (1,1,2,1)
+            background_color: (1,1,1,1)
+            outline_color: (124,252,0)
+        	outline_width: 2
+                        
         Label:
             text: "Check if you want to download .mp3 file"
         CheckBox:
-            on_active: root.checkbox_click(self, self.active,"mp3")
-        Button:
-            text: "Click here to download a playlist"  
-            on_press: 
-                threading.Thread(target=root.showtitle).start()
-                threading.Thread(target=root.DownloadPlaylist).start()
-                
+            on_active: root.checkbox_click(self, self.active,"mp3")    
+        Label:
+            id: output_label
+            text: "You selected downloading video file"
         Label:
             id: current
             text: root.title_text
-            
-        Label:
-            id: output_label
-            text: "You choose downloading video file"
+            color: (1,1,2,1)
+            background_color: (1,1,1,1)
+            outline_color: (124,252,0)
+        	outline_width: 2
         Button:
             text: "<-- Download a single video from Youtube"
             background_color: (1,0,1,1)
