--- a/kivyfile.kv
+++ b/kivyfile.kv
@@ -101,7 +101,7 @@ WindowManager:
             Button:
             	text: "Download destination..."
         		size_hint: (None,None)
-                size: (200,30)
+                size: (350,30)
         		on_release:
             		root.file_chooser()   
             Label:
@@ -119,7 +119,7 @@ WindowManager:
                         size: self.size
                         pos:self.pos
                 size_hint: (None,None)
-                size: (200,30)
+                size: (150,30)
             Label:
                 id: path
                 text: root.path
@@ -135,7 +135,7 @@ WindowManager:
                         size: self.size
                         pos:self.pos
                 size_hint: (None,None)
-                size: (200,30)
+                size: (350,30)
                 
             CheckBox:
                 on_active: root.checkbox_click(self, self.active, "mp3")
@@ -155,7 +155,7 @@ WindowManager:
         size_hint: None, None
         pos_hint: {'x':0, 'y':0}
         Button:
-            text: "Download a playlist from Youtube -->"
+            text: "<--- Download a playlist from Youtube"
             background_color: (1,0,1,1)
         	font_size: 15				
         	color: (1,1,0,1)
@@ -164,7 +164,7 @@ WindowManager:
         	outline_color: (124,252,0)
         	outline_width: 2
         	size_hint: (None,None)
-            size: (400,30)
+            size: (500,30)
             on_release: 
                 app.root.current= "second"
                 root.manager.transition.direction = "right"        
@@ -172,6 +172,19 @@ WindowManager:
         id: downloaded
         size_hint: 0.5, 0.4
         pos_hint:{'x':0, 'y': 0.6}
+        Label:
+            pos_hint: {'center_x': 0.5, 'center_y': .5}
+            size_hint: (None,None)
+            size: (500,200)
+            text_size: self.size
+            halign: 'center'
+            valign: 'middle'           
+            multiline:True
+            bold:True
+        	italic:True
+        	outline_color:(124,252,0)
+        	outline_width:2   
+            text:root.title_text
        
             
     RelativeLayout:
@@ -189,51 +202,112 @@ WindowManager:
                 
 <SecondWindow>:
     name: "second"
-    BoxLayout:
-        cols:1
-        size: root.width, root.height
-        orientation: "vertical"			
-        Label:
-            text: "Download a playlist from Youtube - insert link"
-        TextInput:
-            id: url
-            multiline: False
-        BoxLayout:       
+    canvas.before:
+        Rectangle:
+            pos: self.pos
+            size: self.size
+            source: 'gui-background.jpg'      
+    AnchorLayout:
+        anchor_x: "left" 
+        anchor_y: "top"     
+        GridLayout:  
+            cols:3                      
+            size_hint: None, None
+            size: self.minimum_size                        
+            
+            Label:
+                text: "Insert link to download a playlist"
+                background_color: (0,0,1,1)
+                bold: True
+            	italic: True
+            	outline_color: (124,252,0)
+            	outline_width: 2
+                canvas.before:
+                    Color:
+                        rgba: self.background_color
+                    Rectangle:
+                        size: self.size
+                        pos:self.pos
+                size_hint: (None,None)
+                size: (300, 30)
+                valign:"middle"
+            TextInput:
+                id: url      
+                multiline: False
+                size_hint: (None,None)
+                size: (400, 30) 
             Button:
-    			text: "Choose download destination"
-    			on_release:
-        			root.file_chooser()        
+                text: "Click here to download a playlist"
+                size_hint: (None,None)
+                size: (300, 30)
+                on_press:
+                    threading.Thread(target=root.showtitle).start()
+                    threading.Thread(target=root.DownloadPlaylist).start()                                            
+    RelativeLayout:
+        size_hint: None, None
+        pos_hint: {'x':0, 'center_y':0.17}
+        GridLayout:
+            cols:2
+            size_hint: None, None
+            size: self.minimum_size
             Button:
-                text: "Click here to download a playlist"  
-                on_press: 
-                    t=threading.Thread(target=root.showtitle)
-                    k=threading.Thread(target=root.DownloadPlaylist)
-                    t.start()
-                    k.start()
-        Label:
-            id: path
-            text: root.path
-            color: (1,1,2,1)
-            background_color: (1,1,1,1)
-            outline_color: (124,252,0)
-        	outline_width: 2
-                        
-        Label:
-            text: "Check if you want to download .mp3 file"
-        CheckBox:
-            on_active: root.checkbox_click(self, self.active,"mp3")    
-        Label:
-            id: output_label
-            text: "You selected downloading video file"
-        Label:
-            id: current
-            text: root.title_text
-            color: (1,1,2,1)
-            background_color: (1,1,1,1)
-            outline_color: (124,252,0)
-        	outline_width: 2
+            	text: "Download destination..."
+        		size_hint: (None,None)
+                size: (350,30)
+        		on_release:
+            		root.file_chooser()   
+            Label:
+                id: output_label
+                text: "Selected: Video File"
+                background_color: (0,0,1,1)
+                bold: True
+            	italic: True
+            	outline_color: (124,252,0)
+            	outline_width: 2
+                canvas.before:
+                    Color:
+                        rgba: self.background_color
+                    Rectangle:
+                        size: self.size
+                        pos:self.pos
+                size_hint: (None,None)
+                size: (150,30)
+            Label:
+                id: path
+                text: root.path
+                background_color: (0,0,1,1)
+                bold: True
+            	italic: True
+            	outline_color: (124,252,0)
+            	outline_width: 2
+                canvas.before:
+                    Color:
+                        rgba: self.background_color
+                    Rectangle:
+                        size: self.size
+                        pos:self.pos
+                size_hint: (None,None)
+                size: (350,30)
+                
+            CheckBox:
+                on_active: root.checkbox_click(self, self.active, "mp3")
+                size_hint_x: 0.1
+                canvas.before:
+                    Color:
+                        rgb: 1,0,0
+                    Rectangle:
+                        pos:self.center_x-8, self.center_y-8
+                        size:[16,16]
+                    Color:
+                        rgb: 0,0,0
+                    Rectangle:
+                        pos:self.center_x-7, self.center_y-7
+                        size:[14,14]
+    RelativeLayout:
+        size_hint: None, None
+        pos_hint: {'x':0, 'y':0}
         Button:
-            text: "<-- Download a single video from Youtube"
+            text: "Download a single file from Youtube --->"
             background_color: (1,0,1,1)
         	font_size: 15				
         	color: (1,1,0,1)
@@ -241,10 +315,42 @@ WindowManager:
         	italic: True
         	outline_color: (124,252,0)
         	outline_width: 2
-        	size_hint_y: None
+        	size_hint: (None,None)
+            size: (500,30)
             on_release: 
                 app.root.current= "first"
-                root.manager.transition.direction = "left"   
+                root.manager.transition.direction = "left"        
+    RelativeLayout:
+        id: downloaded
+        size_hint: 0.5, 0.4
+        pos_hint:{'x':0, 'y': 0.6}
+        Label:
+            pos_hint: {'center_x': 0.5, 'center_y': .5}
+            size_hint: (None,None)
+            size: (500,200)
+            text_size: self.size
+            halign: 'center'
+            valign: 'middle'           
+            multiline:True
+            bold:True
+        	italic:True
+        	outline_color:(124,252,0)
+        	outline_width:2   
+            text:root.title_text
+       
+            
+    RelativeLayout:
+        size_hint: 0.5, 0.85
+        pos_hint: {'right':1, 'bottom':1}
+        RecycleView:
+            id: rv
+            viewclass: 'Button'
+            RecycleBoxLayout:            
+                default_size: None, dp(26)
+                default_size_hint: 1, None
+                size_hint_y: None
+                height: self.minimum_height
+                orientation: 'vertical'  
               		
               		
                 
