added popups + some bug fixes

--- a/kivyfile.kv
+++ b/kivyfile.kv
@@ -37,7 +37,7 @@ WindowManager:
             
             Label:
                 text: "Insert link to download single video"
-                background_color: (0,0,1,1)
+                background_color: (13/256, 33/256, 128/256, 1)
                 bold: True
             	italic: True
             	outline_color: (124,252,0)
@@ -66,7 +66,7 @@ WindowManager:
             Label:
                 id: suggestionlabel
                 text: "Search YouTube for a link to video"
-                background_color: (0,0,1,1)
+                background_color: (13/256, 33/256, 128/256, 1)
                 bold: True
             	italic: True
             	outline_color: (124,252,0)
@@ -107,7 +107,7 @@ WindowManager:
             Label:
                 id: output_label
                 text: "Selected: Video File"
-                background_color: (0,0,1,1)
+                background_color: (13/256, 33/256, 128/256, 1)
                 bold: True
             	italic: True
             	outline_color: (124,252,0)
@@ -123,7 +123,7 @@ WindowManager:
             Label:
                 id: path
                 text: root.path
-                background_color: (0,0,1,1)
+                background_color: (13/256, 33/256, 128/256, 1)
                 bold: True
             	italic: True
             	outline_color: (124,252,0)
@@ -217,7 +217,7 @@ WindowManager:
             
             Label:
                 text: "Insert link to download a playlist"
-                background_color: (0,0,1,1)
+                background_color: (13/256, 33/256, 128/256, 1)
                 bold: True
             	italic: True
             	outline_color: (124,252,0)
@@ -259,7 +259,7 @@ WindowManager:
             Label:
                 id: output_label
                 text: "Selected: Video File"
-                background_color: (0,0,1,1)
+                background_color: (13/256, 33/256, 128/256, 1)
                 bold: True
             	italic: True
             	outline_color: (124,252,0)
@@ -275,7 +275,7 @@ WindowManager:
             Label:
                 id: path
                 text: root.path
-                background_color: (0,0,1,1)
+                background_color: (13/256, 33/256, 128/256, 1)
                 bold: True
             	italic: True
             	outline_color: (124,252,0)
